--- a/views/stylist.html.twig
+++ b/views/stylist.html.twig
@@ -7,32 +7,38 @@
     <div class="container">
         <div class="jumbotron">
             <h1>{{ stylist.getStylistName() }}</h1>
+            <h2><em>Add a client or click on a client to update.</em></h2>
         </div>
         <div class="row">
             <div class="col-sm-6">
+                <h2>Add a client.</h2>
+                <form action="/client" method="post">
+                    <input id="stylist_id" type="hidden" name="stylist_id" value="{{ stylist.getId() }}">
+                    <label for="name">Client Name:</label>
+                    <input id="name" name="name" type="text">
+                    <button type="submit">Add Client</button>
+                </form>
+
                 {% if clients is not empty %}
-                    <p>See clients and their stylists below:</p>
+                    <h1>Here are {{ stylist.getStylistName() }}'s clients:</h1>
                     <ul>
                         {% for client in clients %}
-                            <li><a href="/client/{{ client.getId }}">{{ client.getClientName }}</a></li> <!-- get id to client -->
+                            <h2><a href="/client/{{ client.getId }}">{{ client.getClientName }}</a></h2>
                         {% endfor %}
                     </ul>
                {% else %}
                  <p>There are no clients yet! Add a client below.</p>
                {% endif %}
 
-               <form action="/client" method="post">
-                   <input id="stylist_id" type="hidden" name="stylist_id" value="{{ stylist.getId() }}">
-                   <label for="name">Client Name:</label>
-                   <input id="name" name="name" type="text">
-                   <button type="submit">Add Client</button>
-               </form>
+
+
             </div>
             <div class="col-sm-6">
-                <p><a href="/stylists/{{ stylist.getId }}">Click here</a> to update stylist list.</p>
-                <p><a href="/clients/{{ clients.getId }}">Click here</a> to update stylist list.</p>
-                <button><a href="/">Home</a></button>
+                <h1><a href="/stylists_edit/{{ stylist.getId }}">Click here</a> to update <strong>{{ stylist.getStylistName() }}</strong>.</h1>
+                <h2><a href="/">Home</a></h2>
             </div>
 
         </div>
     </div>
+</body>
+</html>
