--- a/views/edit_client.html.twig
+++ b/views/edit_client.html.twig
@@ -7,10 +7,11 @@
     <div class="container">
         <div class="jumbotron">
             <h1>{{ clients.getClientName }}</h1>
+            <h2><em>Use form to update client.</em></h2>
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <h1>Update the {{ clients.getClientName }}'s name:' </h1>
+                <h1>Update {{ clients.getClientName }}:</h1>
 
                 <form action="/clients/{{ clients.getId }}" method="post">
                   <input name="_method" type="hidden" value="patch">
@@ -24,10 +25,12 @@
                   <input name="_method" type="hidden" value="delete">
 
                   <button type="submit">Delete this client</button>
-                </form>            </div>
+                </form>
+                <h2><a href='/'>Home</a></h2>
+            </div>
             <div class="col-sm-6">
-                <p><a href="/total">Click here</a> to see all of the clients and stylists.</p>
-                <p><a href='/'>Home</a></p>                
+                <h2><a href="/total">Click here</a> to see </br>all of the clients and stylists.</h2>
+
             </div>
 
         </div>
