--- a/views/total.html.twig
+++ b/views/total.html.twig
@@ -3,20 +3,17 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">        <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css">
-        <link rel="stylesheet" href="/css/bootstrap-theme.min.css" type="text/css">
         <link rel="stylesheet" href="/css/styles.css" type="text/css">
         <meta charset="utf-8">
-        <title></title>
+        <title>All Stylists/Clients</title>
     </head>
     <body>
+        <div class="jumbotron">
+            <h1>All of the stylists and clients</h1>
+        </div>
         <div class="container">
-            <div class="jumbotron">
-                <h1>All of the stylists and clients</h1>
-
-            </div>
             <div class="row">
                 <div class="col-sm-6">
-
                     {% for stylist in stylists %}
                     <h1>Stylist: {{ stylist.getStylistName }}</h1>
                         {% for client in clients %}
@@ -26,19 +23,19 @@
                         {% endif %}
                         </ul>
                         {% endfor %}
-
                     {% endfor %}
-
-
-
                 </div>
                 <div class="col-sm-6">
                     <h1><a href='/'>Home</a></h1>
                 </div>
-
             </div>
-
         </div>
-
+        <div class="navbar navbar-fixed-bottom" role="navigation">
+            <div class="container">
+                <div class="navbar-text pull-left">
+                    <p>© 2016 Josh Overly.</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
